# Tools with just one source file are in this directory.  Otherwise they are in a subdirectory.
subdir('xspx')
subdir('asnx')
asn_strip_exe = executable('asn-strip', 'asnstrip.cpp', link_with : xenon)
# target_link_libraries(['asn-strip', 'xenon'])
idm_exe = executable('idm', 'idm.cpp', link_with : xenon)
# target_link_libraries(['idm', 'xenon'])
xddl2wd_exe = executable('xddl2wd', 'xddl2wd.cpp', link_with : xenon)
# target_link_libraries(['xddl2wd', 'xenon'])
xml_patch_exe = executable('xml-patch', 'xmlpatch.cpp', link_with : xenon)
# target_link_libraries(['xml-patch', 'xenon'])
xml_pp_exe = executable('xml-pp', 'xmlpp.cpp', link_with : xenon)
# target_link_libraries(['xml-pp', 'xenon'])
xv_exe = executable('xv', 'xv.cpp', link_with : xenon)
# target_link_libraries(['xv', 'xenon'])
recombobulator_exe = executable('recombobulator', 'recombobulator.cpp', link_with : xenon)
# target_link_libraries(['recombobulator', 'xenon'])
