recref_exe = executable('recref', 'recref_unit.cpp')
test('recref', recref_exe)
msg_exe = executable('msg', 'message_unit.cpp', link_with : xenon_lib)
test('msg', msg_exe)
# target_link_libraries(['msg', 'xenon'])
#test('NAME', 'msg', 'WORKING_DIRECTORY', cmake_current_source_dir, 'COMMAND', 'msg')
subdir('itu')
subdir('xmlparse')
subdir('document')
subdir('script')
subdir('xddlunit')
