bison = find_program('bison', required : true)
flex = dependency('flex'), required : true)
# bison_target(['MyParser', 'asn1.ypp', cmake_current_binary_dir, '/parser.cc'])
# flex_target(['MyScanner', 'asn1.l', cmake_current_binary_dir, '/lexer.cc'])
# add_flex_bison_dependency(['MyScanner', 'MyParser'])
# include_directories(cmake_current_source_dir)
asnx_exe = executable('asnx', 'asnast.cpp', bison_myparser_outputs, flex_myscanner_outputs)
# target_link_libraries(['asnx', 'xenon'])
