test('NAME', 'basic', 'WORKING_DIRECTORY', cmake_current_source_dir, 'COMMAND', 'xv', 'basic.xv')
test('NAME', 'brass', 'WORKING_DIRECTORY', cmake_current_source_dir, 'COMMAND', 'xv', '--xddl_path=${CMAKE_SOURCE_DIR}/xddl', 'icd_brass.xv')
test('NAME', 'gold', 'WORKING_DIRECTORY', cmake_current_source_dir, 'COMMAND', 'xv', '--xddl_path=${CMAKE_SOURCE_DIR}/xddl', 'icd_gold.xv')
