# add_custom_command(['OUTPUT', cmake_current_source_dir, '/../../3GPP/TS-25.331.xddl', 'DEPENDS', '25.331.asn', 'substitute.txt', 'asnx', 'xml-patch', 'COMMAND', 'asnx', '-t', cmake_current_source_dir, '/25.331.asn', '>', 'temp.xddl', 'COMMAND', 'xml-patch', 'temp.xddl', cmake_current_source_dir, '/substitute.txt', '>', cmake_current_source_dir, '/../../3GPP/TS-25.331.xddl'])
# add_custom_target(['25_331', 'ALL', 'DEPENDS', cmake_current_source_dir, '/../../3GPP/TS-25.331.xddl'])
